--- a/sections/featured-rich-text.liquid
+++ b/sections/featured-rich-text.liquid
@@ -1,14 +1,45 @@
-<link rel="stylesheet" href="{{ 'section-rich-text.css' | asset_url }}" media="print" onload="this.media='all'">
+{% liquid
+    assign text_alignment = section.settings.text_alignment
+    assign full_width = section.settings.full_width
+    assign bg_color = section.settings.bg_color | default: 'transparent'
+    assign text_color = section.settings.text_color | default: 'inherit'
+    assign title_color = section.settings.title_color | default: 'inherit'
 
+    assign btn_link_color = section.settings.btn_link_color | default: 'inherit'
+    assign btn_bg_color = section.settings.btn_bg_color | default: 'transparent'
+    assign btn_link_color_hover = section.settings.btn_link_color_hover | default: 'inherit'
+    assign btn_bg_color_hover = section.settings.btn_bg_color_hover | default: 'inherit'
+
+    assign pad_top = section.settings.padding_top
+    assign pad_bot = section.settings.padding_bottom
+    assign width = section.settings.width
+%}
+
+{% capture styles %}
+    --title-color-rich-text: {{ title_color }};
+    --text-color-rich-text: {{ text_color }};
+    --background-color-rich-text: {{ bg_color }};
+    --btn_link_color-rich-text: {{ btn_link_color -}};
+    --btn_bg_color-rich-text: {{ btn_bg_color }};
+    --btn_link_color_hover-rich-text: {{ btn_link_color_hover }};
+    --btn_bg_color_hover-rich-text: {{ btn_bg_color_hover }};
+    --pad-top-rich-text: {{ pad_top }}px;
+    --pad-bot-rich-text: {{ pad_bot }}px;
+    --width-rich-text: {{ width }}px;
+{% endcapture %}
+
+{%- assign styles = styles | strip_newlines -%}
+
+<link rel="stylesheet" href="{{ 'section-rich-text.css' | asset_url }}" media="print" onload="this.media='all'">
 <noscript>{{ 'section-rich-text.css' | asset_url | stylesheet_tag }}</noscript>
 
-<div class="rich-text{% if section.settings.full_width %} rich-text--full-width{% endif %} color-{{ section.settings.color_scheme }}">
-    <div class="rich-text__blocks">
+<div class="rich-text text-alignment--{{ text_alignment }} full_width--{{ full_width }}" style="{{ styles }}">
+    <div class="rich-text__blocks container">
         {%- for block in section.blocks -%}
             {%- case block.type -%}
                 {%- when 'heading' -%}
                     <h2
-                        class="{% if block.settings.heading_size == 'small' %}h2{% else %}h1{% endif %}"
+                        class="{% if block.settings.heading_size == 'small' %}h1{% else %}h0{% endif %}"
                         {{ block.shopify_attributes }}
                     >
                         {{ block.settings.heading | escape }}
@@ -22,7 +53,7 @@
                         {% else %}
                             href="{{ block.settings.button_link }}"
                         {% endif %}
-                        class="button{% if block.settings.button_style_secondary %} button--secondary{% else %} button--primary{% endif %}"
+                        class="button{% if block.settings.button_style_secondary %} button--outline{% else %} button--primary{% endif %} button--middle"
                         {{ block.shopify_attributes }}
                     >
                         {{ block.settings.button_label | escape }}
@@ -40,37 +71,98 @@
     "settings": [
         {
             "type": "select",
-            "id": "color_scheme",
+            "id": "text_alignment",
             "options": [
                 {
-                    "value": "accent-1",
-                    "label": "t:sections.rich-text.settings.color_scheme.options__1.label"
+                    "value": "left",
+                    "label": "Left"
                 },
                 {
-                    "value": "accent-2",
-                    "label": "t:sections.rich-text.settings.color_scheme.options__2.label"
+                    "value": "center",
+                    "label": "Center"
                 },
                 {
-                    "value": "background-1",
-                    "label": "t:sections.rich-text.settings.color_scheme.options__3.label"
-                },
-                {
-                    "value": "background-2",
-                    "label": "t:sections.rich-text.settings.color_scheme.options__4.label"
-                },
-                {
-                    "value": "inverse",
-                    "label": "t:sections.rich-text.settings.color_scheme.options__5.label"
+                    "value": "right",
+                    "label": "Right"
                 }
             ],
-            "default": "background-1",
-            "label": "t:sections.rich-text.settings.color_scheme.label"
+            "default": "center",
+            "label": "Text alignment"
         },
         {
             "type": "checkbox",
             "id": "full_width",
-            "default": true,
-            "label": "t:sections.rich-text.settings.full_width.label"
+            "default": false,
+            "label": "Enabled full width?"
+        },
+        {
+            "type": "range",
+            "id": "width",
+            "min": 1000,
+            "max": 1800,
+            "step": 40,
+            "default": 1200,
+            "unit": "px",
+            "label": "Section Width"
+        },
+        {
+            "type": "paragraph",
+            "content": "Style options"
+        },
+        {
+            "type": "color",
+            "id": "bg_color",
+            "label": "Background color"
+        },
+        {
+            "type": "color",
+            "id": "title_color",
+            "label": "Title color"
+        },
+        {
+            "type": "color",
+            "id": "text_color",
+            "label": "Description color"
+        },
+        {
+            "type": "color",
+            "id": "btn_bg_color",
+            "label": "Button background color"
+        },
+        {
+            "type": "color",
+            "id": "btn_link_color",
+            "label": "Button link color"
+        },
+        {
+            "type": "color",
+            "id": "btn_bg_color_hover",
+            "label": "Button background hover color"
+        },
+        {
+            "type": "color",
+            "id": "btn_link_color_hover",
+            "label": "Button link hover color"
+        },
+        {
+            "type": "range",
+            "id": "padding_top",
+            "min": 0,
+            "max": 60,
+            "step": 5,
+            "unit": "px",
+            "label": "Padding top",
+            "default": 30
+        },
+        {
+            "type": "range",
+            "id": "padding_bottom",
+            "min": 0,
+            "max": 60,
+            "step": 5,
+            "unit": "px",
+            "label": "Padding bottom",
+            "default": 30
         }
     ],
     "blocks": [
