--- a/scss/pages/main-head.scss
+++ b/scss/pages/main-head.scss
@@ -66,7 +66,8 @@
         }
         .main-head__sub_heading {
             color: var(--sub_title_color-main-head);
-            margin-bottom: -5px;
+            margin-bottom: 5px;
+            text-transform: uppercase;
         }
         .main-head__heading {
             color: var(--title-color-main-head);
