--- a/sections/main-head.liquid
+++ b/sections/main-head.liquid
@@ -69,7 +69,7 @@
         <div class="main-head__wrapper container">
             {% if sub_heading != blank or heading != blank or text != blank %}
                 <div class="row">
-                    <div class="col-12">
+                    <div class="col-12 col-sm-12 col-md-10 col-lg-8">
                         {% if sub_heading != blank %}
                             <h5 class="main-head__sub_heading h5">
                                 {{ sub_heading | escape }}
