--- a/sections/main-blog.liquid
+++ b/sections/main-blog.liquid
@@ -238,12 +238,6 @@
         },
         {
             "type": "checkbox",
-            "id": "count_products",
-            "default": true,
-            "label": "Show count Products"
-        },
-        {
-            "type": "checkbox",
             "id": "full_width",
             "default": false,
             "label": "Enabled full width?"
@@ -273,15 +267,7 @@
         {
             "type": "title",
             "name": "t:sections.main-blog.blocks.title.name",
-            "limit": 1,
-            "settings": [
-                {
-                    "type": "checkbox",
-                    "id": "show_date",
-                    "default": false,
-                    "label": "Show date"
-                }
-            ]
+            "limit": 1
         },
         {
             "type": "link",
